--- a/Builder/CMakeLists.txt
+++ b/Builder/CMakeLists.txt
@@ -1,5 +1,1 @@
-include_directories(inc)
-
-set(CodeBuilder src/CodeBuilder.cpp inc/CodeBuilder.hpp)
-
-add_executable(Builder src/main.cpp ${CodeBuilder})
+add_executable(Builder src/main.cpp)
