Added Factory design pattern

--- a/Factory/CMakeLists.txt
+++ b/Factory/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_executable(Factory src/main.cpp)
+include_directories(inc)
+
+set(Person src/Person.cpp inc/Person.hpp)
+
+add_executable(Factory src/main.cpp ${Person})
