--- a/Prototype/CMakeLists.txt
+++ b/Prototype/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_executable(Prototype src/main.cpp)
+include_directories(inc)
+
+set(Line src/Line.cpp inc/Line.hpp)
+
+add_executable(Prototype src/main.cpp ${Line})
