--- a/Singleton/CMakeLists.txt
+++ b/Singleton/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_executable(Singleton src/main.cpp)
+include_directories(inc)
+
+set(Singleton src/Singleton.cpp inc/Singleton.hpp)
+
+add_executable(Singleton src/main.cpp ${Singleton})
