--- a/Adapter/CMakeLists.txt
+++ b/Adapter/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(inc)
-
-set(Geometry src/Geometry.cpp inc/Geometry.hpp)
-
 add_executable(Adapter src/main.cpp ${Geometry})
+
+target_include_directories(Adapter PRIVATE inc/)
