--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 add_subdirectory(Builder)
 add_subdirectory(Factory)
 add_subdirectory(Singleton)
+add_subdirectory(Bridge)
 
 # Add other
 #add_subdirectory(<>)
